# HiTIN

./: .gitignore  README.md  cpv_download.py  cpv_hierarchy.py  cpv_prepare_data.py  cpv_taxonomy.py  cpv_to_hitin_input.py  download_cpv.py  hitin_cpv.ipynb  play.py  pyproject.toml  train.py
config/: cpv.json
data_modules/: collator.py  data_loader.py  dataset.py  vocab.py
data_preprocessing/: cpv_download.py  cpv_hierarchy.py  cpv_prepare_data.py
helper/: arg_parser.py  hierarchy_tree_statistic.py  logger.py
models/: model.py  text_encoder.py  text_feature_propagation.py
models/structure_model/: structure_encoder.py  tin.py
train_modules/: trainer.py
