[tool.poetry]
name = "hitin"
version = "0.1.0"
description = ""
authors = ["Jarasłaŭ Viktorčyk <ugzuzg@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.6"
parquet-tools = "^0.2.15"
pandas = "^2.1.4"

[tool.poetry.group.dev.dependencies]
numpy = "1.26.3"
scikit-learn = "1.3.2"
transformers = "4.36.0"
numba = "0.58.1"
torch = {version = "^2.1.2+cu121", source = "pytorch"}

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
